k8s-manifests/tenant-a/prometheus-tenant-a-network-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-tenant-a
  namespace: tenant-a
spec:
  podSelector:
    matchLabels:
      app: ml-inference
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
      ports:
        - port: 8000
          protocol: TCP
